--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/maxiv97/coderhouse-course.git"
   }
 }
